Add team member names

--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -1,16 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    ""
-   ]
+    "# Phase II: Data Curation, Exploratory Analysis and Plotting (5\\%)\n",
+    "\n",
+    "### Team Members:\n",
+    "- Melanie Yu\n",
+    "- Yunhan Luo\n",
+    "- Ani McCaskill\n",
+    "- Owen Sweetman\n",
+    "\n",
+    "\n",
+    "## Part 1:\n",
+    "(1%) Expresses the central motivation of the project and explains the (at least) two key questions to be explored. Gives a summary of the data processing pipeline so a technical expert can easily follow along."
+   ],
+   "id": "f588f1810fa74996"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Problem Motivation",
+   "id": "8af2c52fd860f077"
   }
  ],
  "metadata": {
