--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -36,8 +36,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T18:07:36.773477Z",
-     "start_time": "2025-10-26T18:07:30.968704Z"
+     "end_time": "2025-10-26T18:37:06.315120Z",
+     "start_time": "2025-10-26T18:37:01.807232Z"
     }
    },
    "cell_type": "code",
@@ -47,6 +47,14 @@
     "import pandas as pd\n",
     "\n",
     "def get_data():\n",
+    "    \"\"\"\n",
+    "    Gets video data from YouTube\n",
+    "\n",
+    "    Args:\n",
+    "\n",
+    "    Returns:\n",
+    "        df (pd.DataFrame) : dataframe of the data\n",
+    "    \"\"\"\n",
     "    # Including the secret API key which is not to be shared\n",
     "    YT_API_KEY = \"AIzaSyBuCEzGkykiISml4F1UVv3Ad6gANyw5-M0\"\n",
     "\n",
@@ -97,10 +105,22 @@
     "    df = pd.DataFrame(video_dict)\n",
     "    return df\n",
     "\n",
-    "data = get_data()\n",
-    "data.head()"
+    "data = get_data()"
    ],
    "id": "9ade6bf5cef0ab56",
+   "outputs": [],
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T18:37:08.271087Z",
+     "start_time": "2025-10-26T18:37:08.258084Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data.head()",
+   "id": "83d676bc405e6cf9",
    "outputs": [
     {
      "data": {
@@ -113,11 +133,11 @@
        "4  joa1N3HlDak        The New Vibe Coding Experience in AI Studio   \n",
        "\n",
        "              published  views  likes  comments duration  \\\n",
-       "0  2025-10-24T19:24:30Z   2007     70         4   PT3M8S   \n",
-       "1  2025-10-24T19:23:11Z    465     22         3  PT2M20S   \n",
-       "2  2025-10-24T18:45:14Z    292      9         2  PT1M10S   \n",
-       "3  2025-10-24T18:35:46Z    184      7         1  PT2M14S   \n",
-       "4  2025-10-24T18:34:43Z   2597    102        11  PT4M41S   \n",
+       "0  2025-10-24T19:24:30Z   2027     72         4   PT3M8S   \n",
+       "1  2025-10-24T19:23:11Z    467     22         3  PT2M20S   \n",
+       "2  2025-10-24T18:45:14Z    295     10         2  PT1M10S   \n",
+       "3  2025-10-24T18:35:46Z    185      8         1  PT2M14S   \n",
+       "4  2025-10-24T18:34:43Z   2627    102        11  PT4M41S   \n",
        "\n",
        "                                                tags  \n",
        "0  [Google, developers, pr_pr: Gemini API / AI St...  \n",
@@ -161,8 +181,8 @@
        "      <td>HKW163OhuSU</td>\n",
        "      <td>Introducing Google Maps Grounding in the Gemin...</td>\n",
        "      <td>2025-10-24T19:24:30Z</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>70</td>\n",
+       "      <td>2027</td>\n",
+       "      <td>72</td>\n",
        "      <td>4</td>\n",
        "      <td>PT3M8S</td>\n",
        "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
@@ -172,7 +192,7 @@
        "      <td>MwhJ2AAEWVo</td>\n",
        "      <td>Build an AI Restaurant Finder in 60 Seconds wi...</td>\n",
        "      <td>2025-10-24T19:23:11Z</td>\n",
-       "      <td>465</td>\n",
+       "      <td>467</td>\n",
        "      <td>22</td>\n",
        "      <td>3</td>\n",
        "      <td>PT2M20S</td>\n",
@@ -183,8 +203,8 @@
        "      <td>ZHpT3ev2XLA</td>\n",
        "      <td>Vibe Code with Your Voice in Google AI Studio</td>\n",
        "      <td>2025-10-24T18:45:14Z</td>\n",
-       "      <td>292</td>\n",
-       "      <td>9</td>\n",
+       "      <td>295</td>\n",
+       "      <td>10</td>\n",
        "      <td>2</td>\n",
        "      <td>PT1M10S</td>\n",
        "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
@@ -194,8 +214,8 @@
        "      <td>zlDziSQ4JTk</td>\n",
        "      <td>New &amp; Improved API Key and Project Management ...</td>\n",
        "      <td>2025-10-24T18:35:46Z</td>\n",
-       "      <td>184</td>\n",
-       "      <td>7</td>\n",
+       "      <td>185</td>\n",
+       "      <td>8</td>\n",
        "      <td>1</td>\n",
        "      <td>PT2M14S</td>\n",
        "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
@@ -205,7 +225,7 @@
        "      <td>joa1N3HlDak</td>\n",
        "      <td>The New Vibe Coding Experience in AI Studio</td>\n",
        "      <td>2025-10-24T18:34:43Z</td>\n",
-       "      <td>2597</td>\n",
+       "      <td>2627</td>\n",
        "      <td>102</td>\n",
        "      <td>11</td>\n",
        "      <td>PT4M41S</td>\n",
@@ -216,23 +236,174 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 8
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T19:05:27.121316Z",
+     "start_time": "2025-10-26T19:05:27.071621Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
+    "import isodate\n",
+    "\n",
     "def clean(df):\n",
-    "    pass"
+    "    \"\"\"\n",
+    "    Cleans the dataframe by doing the following:\n",
+    "        - Converts duration to seconds\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame) : a data frame to clean\n",
+    "\n",
+    "    Returns:\n",
+    "        df (pd.DataFrame) : cleaned data frame\n",
+    "    \"\"\"\n",
+    "\n",
+    "    cleaned = {}\n",
+    "\n",
+    "    cleaned[\"video_id\"] = df[\"video_id\"]\n",
+    "    cleaned[\"title\"] = df[\"title\"]\n",
+    "    cleaned[\"published\"] = df[\"published\"]\n",
+    "    cleaned[\"views\"] = df[\"views\"]\n",
+    "    cleaned[\"likes\"] = df[\"likes\"]\n",
+    "    cleaned[\"comments\"] = df[\"comments\"]\n",
+    "    cleaned[\"duration\"] = df[\"duration\"].apply(lambda x: isodate.parse_duration(x).total_seconds())\n",
+    "    cleaned[\"tags\"] = df[\"tags\"]\n",
+    "\n",
+    "    return pd.DataFrame(cleaned)\n",
+    "\n",
+    "cleaned = clean(data)\n",
+    "cleaned.head()"
    ],
-   "id": "3a863280f0f33bd1"
+   "id": "3a863280f0f33bd1",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      video_id                                              title  \\\n",
+       "0  HKW163OhuSU  Introducing Google Maps Grounding in the Gemin...   \n",
+       "1  MwhJ2AAEWVo  Build an AI Restaurant Finder in 60 Seconds wi...   \n",
+       "2  ZHpT3ev2XLA      Vibe Code with Your Voice in Google AI Studio   \n",
+       "3  zlDziSQ4JTk  New & Improved API Key and Project Management ...   \n",
+       "4  joa1N3HlDak        The New Vibe Coding Experience in AI Studio   \n",
+       "\n",
+       "              published  views  likes  comments  duration  \\\n",
+       "0  2025-10-24T19:24:30Z   2027     72         4     188.0   \n",
+       "1  2025-10-24T19:23:11Z    467     22         3     140.0   \n",
+       "2  2025-10-24T18:45:14Z    295     10         2      70.0   \n",
+       "3  2025-10-24T18:35:46Z    185      8         1     134.0   \n",
+       "4  2025-10-24T18:34:43Z   2627    102        11     281.0   \n",
+       "\n",
+       "                                                tags  \n",
+       "0  [Google, developers, pr_pr: Gemini API / AI St...  \n",
+       "1  [Google, developers, pr_pr: Gemini API / AI St...  \n",
+       "2  [Google, developers, pr_pr: Gemini API / AI St...  \n",
+       "3  [Google, developers, pr_pr: Gemini API / AI St...  \n",
+       "4  [Google, developers, pr_pr: Gemini API / AI St...  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>published</th>\n",
+       "      <th>views</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>comments</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>HKW163OhuSU</td>\n",
+       "      <td>Introducing Google Maps Grounding in the Gemin...</td>\n",
+       "      <td>2025-10-24T19:24:30Z</td>\n",
+       "      <td>2027</td>\n",
+       "      <td>72</td>\n",
+       "      <td>4</td>\n",
+       "      <td>188.0</td>\n",
+       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MwhJ2AAEWVo</td>\n",
+       "      <td>Build an AI Restaurant Finder in 60 Seconds wi...</td>\n",
+       "      <td>2025-10-24T19:23:11Z</td>\n",
+       "      <td>467</td>\n",
+       "      <td>22</td>\n",
+       "      <td>3</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ZHpT3ev2XLA</td>\n",
+       "      <td>Vibe Code with Your Voice in Google AI Studio</td>\n",
+       "      <td>2025-10-24T18:45:14Z</td>\n",
+       "      <td>295</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>zlDziSQ4JTk</td>\n",
+       "      <td>New &amp; Improved API Key and Project Management ...</td>\n",
+       "      <td>2025-10-24T18:35:46Z</td>\n",
+       "      <td>185</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>joa1N3HlDak</td>\n",
+       "      <td>The New Vibe Coding Experience in AI Studio</td>\n",
+       "      <td>2025-10-24T18:34:43Z</td>\n",
+       "      <td>2627</td>\n",
+       "      <td>102</td>\n",
+       "      <td>11</td>\n",
+       "      <td>281.0</td>\n",
+       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
   }
  ],
  "metadata": {
