Summary of Data cleaning

--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -23,7 +23,7 @@
    "id": "8af2c52fd860f077",
    "metadata": {},
    "source": [
-    "# Problem Motivation\n",
+    "## Problem Motivation\n",
     "\n",
     "In today's digital economy, businesses invest billions in video marketing campagins but fully understanding what drives engagement on platforms, such as Youtube, remains a challenge. With 2.7 billion active users, Youtube has become an important channel for brands' visability and customer interactions. Despite widespread adoption, 91% of businesses now use video marketing (Wyzol, 2024) and many campaigns underperfor due to various suboptimal strategies related to video length, posting times, content presentation, and audience targeting. This analysis will focus on analyzing Youtube marketing data to uncover patterns that differntiate the success of video campaigns. By examining metadata features such as video duration, upload times, channel size, engagement metrics, and even content tags, we hope to derive actionable insights that help marketing teams optimize content strategy and maximize ROI. \n",
     "\n",
@@ -32,8 +32,24 @@
     "2. Predictive modeling: Developing a classification model to categorize marketing videoos as high versus low performing based on metadata features. This model can enable brands to forecast campaign success, allocate budgets more efficiently, and design content strategies informed by data.\n",
     "\n",
     "Sources: \n",
-    "- Statista Research Department. \"YouTube - Statistics & Facts.\" Statista, 2024. https://www.statista.com/topics/2019/youtube/\n",
-    "- "
+    "- Statista Research Department. \"YouTube - Statistics & Facts.\" Statista, 2024. https://www.statista.com/topics/2019/youtube/.\n",
+    "- Mohsin, Maryam. \"10 YouTube Stats Every Marketer Should Know in 2024.\" Oberlo, 2024. https://www.oberlo.com/blog/youtube-statistics.\n",
+    "- Wyzowl. \"Video Marketing Statistics 2024.\" Wyzowl, https://www.wyzowl.com/video-marketing-statistics/."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4674739b-5077-4cde-8572-8cdb5ad9b9fd",
+   "metadata": {},
+   "source": [
+    "## Summary of Data Processing\n",
+    "1. Collect data from Youtube API v3\n",
+    "2. Clean and transform the raw data for visualization and analysis\n",
+    "3. Create features to capture engagement patterns\n",
+    "4. Visualize relationships using plotting libraries (Matplotlib, Seaborn, Plotly)\n",
+    "\n",
+    "To process the data, we first got our data through the YouTube Data API v3. Our get_data() function authenticates with the API and queries targeted marketing channels to retrieve video statistics including view count, like count, comment count, duration, tags, and publish date. The data is returned in JSON format and structured into a pandas DataFrame. The cleaning process, implemented in our clean() function, converts YouTube's ISO 8601 duration format into numeric seconds using the isodate library and ensures that all data types are consistent for all engagement metrics. Next, we engineered features to address our research questions by calculating engagement rates (likes + comments per view), parsing through publish timestamps to extract day of week and month, binning durations into categories (short/medium/long), and extracting tag counts. We then perform exploratory data analysis through visualizations including scatter plots of duration vs. engagement, time series showing performance by upload timing, and distribution comparisons between high and low performing videos. Finally, the cleaned data is prepared for machine learning by encoding categorical variables, scaling numeric features, and creating a binary classification target based on engagement rate thresholds to support both regression and classification models.\n",
+    "\n"
    ]
   },
   {
