Keeping track of group contributions

--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -538,17 +538,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72950a15-daef-4c72-a70a-a542d56c3fe2",
+   "cell_type": "markdown",
+   "id": "327ede1b-fc45-4d47-a820-e13abbd72412",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Group Contributions:\n",
+    "- Part 1 Problem Motivation and Data Cleaning Summary: Melanie\n",
+    "- Part 2 Data cleaning: Yunhan\n",
+    "- Part 3 Graphs/Visualizations: Owen and Ani "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d1503c9-c077-4020-9dd8-88b5a321aa74",
+   "id": "037b7c2d-8e75-4264-8c5b-30222fc1fb90",
    "metadata": {},
    "outputs": [],
    "source": []
