Remove duplicate clean fn

--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -63,15 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
    "id": "9ade6bf5cef0ab56",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T18:37:06.315120Z",
-     "start_time": "2025-10-26T18:37:01.807232Z"
+     "end_time": "2025-11-21T01:26:04.497566Z",
+     "start_time": "2025-11-21T01:25:58.687504Z"
     }
    },
-   "outputs": [],
    "source": [
     "# Get the API and Load the Credentials to Access it\n",
     "from googleapiclient.discovery import build\n",
@@ -137,309 +135,26 @@
     "    return df\n",
     "\n",
     "data = get_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "83d676bc405e6cf9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-10-26T18:37:08.271087Z",
-     "start_time": "2025-10-26T18:37:08.258084Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>video_id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>published</th>\n",
-       "      <th>views</th>\n",
-       "      <th>likes</th>\n",
-       "      <th>comments</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>tags</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>HKW163OhuSU</td>\n",
-       "      <td>Introducing Google Maps Grounding in the Gemin...</td>\n",
-       "      <td>2025-10-24T19:24:30Z</td>\n",
-       "      <td>2335</td>\n",
-       "      <td>86</td>\n",
-       "      <td>4</td>\n",
-       "      <td>PT3M8S</td>\n",
-       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MwhJ2AAEWVo</td>\n",
-       "      <td>Build an AI Restaurant Finder in 60 Seconds wi...</td>\n",
-       "      <td>2025-10-24T19:23:11Z</td>\n",
-       "      <td>574</td>\n",
-       "      <td>27</td>\n",
-       "      <td>4</td>\n",
-       "      <td>PT2M20S</td>\n",
-       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ZHpT3ev2XLA</td>\n",
-       "      <td>Vibe Code with Your Voice in Google AI Studio</td>\n",
-       "      <td>2025-10-24T18:45:14Z</td>\n",
-       "      <td>390</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2</td>\n",
-       "      <td>PT1M10S</td>\n",
-       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>zlDziSQ4JTk</td>\n",
-       "      <td>New &amp; Improved API Key and Project Management ...</td>\n",
-       "      <td>2025-10-24T18:35:46Z</td>\n",
-       "      <td>252</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>PT2M14S</td>\n",
-       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>joa1N3HlDak</td>\n",
-       "      <td>The New Vibe Coding Experience in AI Studio</td>\n",
-       "      <td>2025-10-24T18:34:43Z</td>\n",
-       "      <td>2983</td>\n",
-       "      <td>110</td>\n",
-       "      <td>12</td>\n",
-       "      <td>PT4M41S</td>\n",
-       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      video_id                                              title  \\\n",
-       "0  HKW163OhuSU  Introducing Google Maps Grounding in the Gemin...   \n",
-       "1  MwhJ2AAEWVo  Build an AI Restaurant Finder in 60 Seconds wi...   \n",
-       "2  ZHpT3ev2XLA      Vibe Code with Your Voice in Google AI Studio   \n",
-       "3  zlDziSQ4JTk  New & Improved API Key and Project Management ...   \n",
-       "4  joa1N3HlDak        The New Vibe Coding Experience in AI Studio   \n",
-       "\n",
-       "              published  views  likes  comments duration  \\\n",
-       "0  2025-10-24T19:24:30Z   2335     86         4   PT3M8S   \n",
-       "1  2025-10-24T19:23:11Z    574     27         4  PT2M20S   \n",
-       "2  2025-10-24T18:45:14Z    390     13         2  PT1M10S   \n",
-       "3  2025-10-24T18:35:46Z    252     10         1  PT2M14S   \n",
-       "4  2025-10-24T18:34:43Z   2983    110        12  PT4M41S   \n",
-       "\n",
-       "                                                tags  \n",
-       "0  [Google, developers, pr_pr: Gemini API / AI St...  \n",
-       "1  [Google, developers, pr_pr: Gemini API / AI St...  \n",
-       "2  [Google, developers, pr_pr: Gemini API / AI St...  \n",
-       "3  [Google, developers, pr_pr: Gemini API / AI St...  \n",
-       "4  [Google, developers, pr_pr: Gemini API / AI St...  "
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
    ],
-   "source": [
-    "data.head()"
-   ]
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": [
-    "import isodate\n",
-    "\n",
-    "def clean(df):\n",
-    "    \"\"\"\n",
-    "    Cleans the dataframe by doing the following:\n",
-    "        - Converts duration to seconds\n",
-    "\n",
-    "    Args:\n",
-    "        df (pd.DataFrame) : a data frame to clean\n",
-    "\n",
-    "    Returns:\n",
-    "        df (pd.DataFrame) : cleaned data frame\n",
-    "    \"\"\"\n",
-    "\n",
-    "    cleaned = {}\n",
-    "\n",
-    "    cleaned[\"video_id\"] = df[\"video_id\"]\n",
-    "    cleaned[\"title\"] = df[\"title\"]\n",
-    "    cleaned[\"published\"] = df[\"published\"]\n",
-    "    cleaned[\"views\"] = df[\"views\"]\n",
-    "    cleaned[\"likes\"] = df[\"likes\"]\n",
-    "    cleaned[\"comments\"] = df[\"comments\"]\n",
-    "    cleaned[\"duration\"] = df[\"duration\"].apply(lambda x: isodate.parse_duration(x).total_seconds())\n",
-    "    cleaned[\"tags\"] = df[\"tags\"]\n",
-    "\n",
-    "    return pd.DataFrame(cleaned)\n",
-    "\n",
-    "cleaned = clean(data)\n",
-    "cleaned.head()"
-   ],
-   "id": "e37d7a9ce9837831"
+   "source": "data.head()",
+   "id": "ba711370f04376da"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-26T19:05:27.121316Z",
-     "start_time": "2025-10-26T19:05:27.071621Z"
+     "end_time": "2025-11-21T01:26:05.766479Z",
+     "start_time": "2025-11-21T01:26:04.704545Z"
     }
    },
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>video_id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>published</th>\n",
-       "      <th>views</th>\n",
-       "      <th>likes</th>\n",
-       "      <th>comments</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>tags</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>HKW163OhuSU</td>\n",
-       "      <td>Introducing Google Maps Grounding in the Gemin...</td>\n",
-       "      <td>2025-10-24T19:24:30Z</td>\n",
-       "      <td>2335</td>\n",
-       "      <td>86</td>\n",
-       "      <td>4</td>\n",
-       "      <td>188.0</td>\n",
-       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MwhJ2AAEWVo</td>\n",
-       "      <td>Build an AI Restaurant Finder in 60 Seconds wi...</td>\n",
-       "      <td>2025-10-24T19:23:11Z</td>\n",
-       "      <td>574</td>\n",
-       "      <td>27</td>\n",
-       "      <td>4</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ZHpT3ev2XLA</td>\n",
-       "      <td>Vibe Code with Your Voice in Google AI Studio</td>\n",
-       "      <td>2025-10-24T18:45:14Z</td>\n",
-       "      <td>390</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>zlDziSQ4JTk</td>\n",
-       "      <td>New &amp; Improved API Key and Project Management ...</td>\n",
-       "      <td>2025-10-24T18:35:46Z</td>\n",
-       "      <td>252</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1</td>\n",
-       "      <td>134.0</td>\n",
-       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>joa1N3HlDak</td>\n",
-       "      <td>The New Vibe Coding Experience in AI Studio</td>\n",
-       "      <td>2025-10-24T18:34:43Z</td>\n",
-       "      <td>2983</td>\n",
-       "      <td>110</td>\n",
-       "      <td>12</td>\n",
-       "      <td>281.0</td>\n",
-       "      <td>[Google, developers, pr_pr: Gemini API / AI St...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      video_id                                              title  \\\n",
-       "0  HKW163OhuSU  Introducing Google Maps Grounding in the Gemin...   \n",
-       "1  MwhJ2AAEWVo  Build an AI Restaurant Finder in 60 Seconds wi...   \n",
-       "2  ZHpT3ev2XLA      Vibe Code with Your Voice in Google AI Studio   \n",
-       "3  zlDziSQ4JTk  New & Improved API Key and Project Management ...   \n",
-       "4  joa1N3HlDak        The New Vibe Coding Experience in AI Studio   \n",
-       "\n",
-       "              published  views  likes  comments  duration  \\\n",
-       "0  2025-10-24T19:24:30Z   2335     86         4     188.0   \n",
-       "1  2025-10-24T19:23:11Z    574     27         4     140.0   \n",
-       "2  2025-10-24T18:45:14Z    390     13         2      70.0   \n",
-       "3  2025-10-24T18:35:46Z    252     10         1     134.0   \n",
-       "4  2025-10-24T18:34:43Z   2983    110        12     281.0   \n",
-       "\n",
-       "                                                tags  \n",
-       "0  [Google, developers, pr_pr: Gemini API / AI St...  \n",
-       "1  [Google, developers, pr_pr: Gemini API / AI St...  \n",
-       "2  [Google, developers, pr_pr: Gemini API / AI St...  \n",
-       "3  [Google, developers, pr_pr: Gemini API / AI St...  \n",
-       "4  [Google, developers, pr_pr: Gemini API / AI St...  "
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 33,
    "source": [
     "import isodate\n",
     "\n",
@@ -447,6 +162,7 @@
     "    \"\"\"\n",
     "    Cleans the dataframe by doing the following:\n",
     "        - Converts duration to seconds\n",
+    "    Also saves the data to a .csv\n",
     "\n",
     "    Args:\n",
     "        df (pd.DataFrame) : a data frame to clean\n",
@@ -471,7 +187,22 @@
     "cleaned = clean(data)\n",
     "cleaned.head()"
    ],
-   "id": "d4ba6e3a27172302"
+   "id": "d4ba6e3a27172302",
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'to_csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mAttributeError\u001B[39m                            Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[4]\u001B[39m\u001B[32m, line 33\u001B[39m\n\u001B[32m     29\u001B[39m     cleaned.to_csv(output_filename, index=\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[32m     31\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m pd.DataFrame(cleaned)\n\u001B[32m---> \u001B[39m\u001B[32m33\u001B[39m cleaned = \u001B[43mclean\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdata\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     34\u001B[39m cleaned.head()\n",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[4]\u001B[39m\u001B[32m, line 29\u001B[39m, in \u001B[36mclean\u001B[39m\u001B[34m(df)\u001B[39m\n\u001B[32m     27\u001B[39m                             \u001B[38;5;66;03m# Saving cleaned DataFrame to a CSV file\u001B[39;00m\n\u001B[32m     28\u001B[39m output_filename = \u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mcsv_files/cleaned_video_data.csv\u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m---> \u001B[39m\u001B[32m29\u001B[39m \u001B[43mcleaned\u001B[49m\u001B[43m.\u001B[49m\u001B[43mto_csv\u001B[49m(output_filename, index=\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[32m     31\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m pd.DataFrame(cleaned)\n",
+      "\u001B[31mAttributeError\u001B[39m: 'dict' object has no attribute 'to_csv'"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {},
