Save cleaned data to .csv

--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -150,8 +150,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-21T01:26:05.766479Z",
-     "start_time": "2025-11-21T01:26:04.704545Z"
+     "end_time": "2025-11-21T01:33:03.634675Z",
+     "start_time": "2025-11-21T01:33:03.607649Z"
     }
    },
    "cell_type": "code",
@@ -182,7 +182,13 @@
     "    cleaned[\"duration\"] = df[\"duration\"].apply(lambda x: isodate.parse_duration(x).total_seconds())\n",
     "    cleaned[\"tags\"] = df[\"tags\"]\n",
     "\n",
-    "    return pd.DataFrame(cleaned)\n",
+    "    cleaned_df = pd.DataFrame(cleaned)\n",
+    "\n",
+    "    # Saving cleaned DataFrame to a CSV file\n",
+    "    output_filename = f\"foo.csv\"\n",
+    "    cleaned_df.to_csv(output_filename, index=False)\n",
+    "\n",
+    "    return cleaned_df\n",
     "\n",
     "cleaned = clean(data)\n",
     "cleaned.head()"
@@ -190,19 +196,125 @@
    "id": "d4ba6e3a27172302",
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'to_csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mAttributeError\u001B[39m                            Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[4]\u001B[39m\u001B[32m, line 33\u001B[39m\n\u001B[32m     29\u001B[39m     cleaned.to_csv(output_filename, index=\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[32m     31\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m pd.DataFrame(cleaned)\n\u001B[32m---> \u001B[39m\u001B[32m33\u001B[39m cleaned = \u001B[43mclean\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdata\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     34\u001B[39m cleaned.head()\n",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[4]\u001B[39m\u001B[32m, line 29\u001B[39m, in \u001B[36mclean\u001B[39m\u001B[34m(df)\u001B[39m\n\u001B[32m     27\u001B[39m                             \u001B[38;5;66;03m# Saving cleaned DataFrame to a CSV file\u001B[39;00m\n\u001B[32m     28\u001B[39m output_filename = \u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mcsv_files/cleaned_video_data.csv\u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m---> \u001B[39m\u001B[32m29\u001B[39m \u001B[43mcleaned\u001B[49m\u001B[43m.\u001B[49m\u001B[43mto_csv\u001B[49m(output_filename, index=\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[32m     31\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m pd.DataFrame(cleaned)\n",
-      "\u001B[31mAttributeError\u001B[39m: 'dict' object has no attribute 'to_csv'"
-     ]
+     "data": {
+      "text/plain": [
+       "      video_id                                              title  \\\n",
+       "0  9oYHU1hdDog  Agents, AI & The Next Wave: Mike Clark on Vert...   \n",
+       "1  9EGtawwvlNs                    Build an AI Agent with Gemini 3   \n",
+       "2  sCXuCczPE8A  What's on the newsdesk for Google Developers t...   \n",
+       "3  hunRGj4Bpb0         Keep your code fresh and clean with YAGNI!   \n",
+       "4  L0QHMLx02l4  Introducing ADK Go, User Simulator, and more! ...   \n",
+       "\n",
+       "              published  views  likes  comments  duration  \\\n",
+       "0  2025-11-21T00:00:10Z     94      7         2    1602.0   \n",
+       "1  2025-11-20T21:45:49Z   5454    421        24     383.0   \n",
+       "2  2025-11-20T20:00:55Z    870     13         1      34.0   \n",
+       "3  2025-11-20T19:30:53Z    963     20         1      34.0   \n",
+       "4  2025-11-20T17:02:19Z   2007     87         3     132.0   \n",
+       "\n",
+       "                                                tags  \n",
+       "0  [Google, developers, pr_pr: Google Developer G...  \n",
+       "1  [Google, developers, pr_pr: AI DevRel (fka Cor...  \n",
+       "2  [Google, developers, pr_pr: Google for Develop...  \n",
+       "3  [Google, developers, pr_pr: Google for Develop...  \n",
+       "4  [Google, developers, pr_pr: Google for Develop...  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>published</th>\n",
+       "      <th>views</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>comments</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9oYHU1hdDog</td>\n",
+       "      <td>Agents, AI &amp; The Next Wave: Mike Clark on Vert...</td>\n",
+       "      <td>2025-11-21T00:00:10Z</td>\n",
+       "      <td>94</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1602.0</td>\n",
+       "      <td>[Google, developers, pr_pr: Google Developer G...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9EGtawwvlNs</td>\n",
+       "      <td>Build an AI Agent with Gemini 3</td>\n",
+       "      <td>2025-11-20T21:45:49Z</td>\n",
+       "      <td>5454</td>\n",
+       "      <td>421</td>\n",
+       "      <td>24</td>\n",
+       "      <td>383.0</td>\n",
+       "      <td>[Google, developers, pr_pr: AI DevRel (fka Cor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sCXuCczPE8A</td>\n",
+       "      <td>What's on the newsdesk for Google Developers t...</td>\n",
+       "      <td>2025-11-20T20:00:55Z</td>\n",
+       "      <td>870</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>[Google, developers, pr_pr: Google for Develop...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hunRGj4Bpb0</td>\n",
+       "      <td>Keep your code fresh and clean with YAGNI!</td>\n",
+       "      <td>2025-11-20T19:30:53Z</td>\n",
+       "      <td>963</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>[Google, developers, pr_pr: Google for Develop...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>L0QHMLx02l4</td>\n",
+       "      <td>Introducing ADK Go, User Simulator, and more! ...</td>\n",
+       "      <td>2025-11-20T17:02:19Z</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>87</td>\n",
+       "      <td>3</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>[Google, developers, pr_pr: Google for Develop...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 7
   },
   {
    "metadata": {},
