--- a/phase3.ipynb
+++ b/phase3.ipynb
@@ -1,16 +1,178 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    ""
-   ]
+    "# Phase III: First ML Proof of Concept (5\\%)\n",
+    "\n",
+    "### Team Names:\n",
+    "- Melanie Yu\n",
+    "- Yunhan Luo\n",
+    "- Ani McCaskill\n",
+    "- Owen Sweetman"
+   ],
+   "id": "f8424abeea3f8127"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Part 1: First ML model using Numpy\n",
+    "(3%) The implementation (using NumPy) of your first ML model as a function call to the cleaned data\n"
+   ],
+   "id": "16e2d5dd421544df"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-21T01:37:43.648766Z",
+     "start_time": "2025-11-21T01:37:43.645345Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ],
+   "id": "d619d076cd690e98",
+   "outputs": [],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-21T01:37:47.628881Z",
+     "start_time": "2025-11-21T01:37:47.595150Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = pd.read_csv(\"csv_files/cleaned_video_data.csv\")\n",
+    "df.head()"
+   ],
+   "id": "f691867363f1b246",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      video_id                                              title  \\\n",
+       "0  9oYHU1hdDog  Agents, AI & The Next Wave: Mike Clark on Vert...   \n",
+       "1  9EGtawwvlNs                    Build an AI Agent with Gemini 3   \n",
+       "2  sCXuCczPE8A  What's on the newsdesk for Google Developers t...   \n",
+       "3  hunRGj4Bpb0         Keep your code fresh and clean with YAGNI!   \n",
+       "4  L0QHMLx02l4  Introducing ADK Go, User Simulator, and more! ...   \n",
+       "\n",
+       "              published  views  likes  comments  duration  \\\n",
+       "0  2025-11-21T00:00:10Z     94      7         2    1602.0   \n",
+       "1  2025-11-20T21:45:49Z   5454    421        24     383.0   \n",
+       "2  2025-11-20T20:00:55Z    870     13         1      34.0   \n",
+       "3  2025-11-20T19:30:53Z    963     20         1      34.0   \n",
+       "4  2025-11-20T17:02:19Z   2007     87         3     132.0   \n",
+       "\n",
+       "                                                tags  \n",
+       "0  ['Google', 'developers', 'pr_pr: Google Develo...  \n",
+       "1  ['Google', 'developers', 'pr_pr: AI DevRel (fk...  \n",
+       "2  ['Google', 'developers', 'pr_pr: Google for De...  \n",
+       "3  ['Google', 'developers', 'pr_pr: Google for De...  \n",
+       "4  ['Google', 'developers', 'pr_pr: Google for De...  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>published</th>\n",
+       "      <th>views</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>comments</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>tags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9oYHU1hdDog</td>\n",
+       "      <td>Agents, AI &amp; The Next Wave: Mike Clark on Vert...</td>\n",
+       "      <td>2025-11-21T00:00:10Z</td>\n",
+       "      <td>94</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1602.0</td>\n",
+       "      <td>['Google', 'developers', 'pr_pr: Google Develo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9EGtawwvlNs</td>\n",
+       "      <td>Build an AI Agent with Gemini 3</td>\n",
+       "      <td>2025-11-20T21:45:49Z</td>\n",
+       "      <td>5454</td>\n",
+       "      <td>421</td>\n",
+       "      <td>24</td>\n",
+       "      <td>383.0</td>\n",
+       "      <td>['Google', 'developers', 'pr_pr: AI DevRel (fk...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sCXuCczPE8A</td>\n",
+       "      <td>What's on the newsdesk for Google Developers t...</td>\n",
+       "      <td>2025-11-20T20:00:55Z</td>\n",
+       "      <td>870</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>['Google', 'developers', 'pr_pr: Google for De...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hunRGj4Bpb0</td>\n",
+       "      <td>Keep your code fresh and clean with YAGNI!</td>\n",
+       "      <td>2025-11-20T19:30:53Z</td>\n",
+       "      <td>963</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>['Google', 'developers', 'pr_pr: Google for De...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>L0QHMLx02l4</td>\n",
+       "      <td>Introducing ADK Go, User Simulator, and more! ...</td>\n",
+       "      <td>2025-11-20T17:02:19Z</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>87</td>\n",
+       "      <td>3</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>['Google', 'developers', 'pr_pr: Google for De...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
   }
  ],
  "metadata": {
